group things by a thread  instead of individual messages
