# server/docs/swagger.json
@@ -254,6 +254,49 @@
                     }
                 }
             }
+        },
+        "/threads/pull": {
+            "get": {
+                "description": "Sync endpoint to pull all changes to threads for this account.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "email"
+                ],
+                "summary": "Get Threads",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "threadId",
+                        "name": "threadId",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Last updated time",
+                        "name": "updatedAt",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Batch size",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/PullThreadResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -312,6 +355,21 @@
             ],
             "properties": {
                 "tag": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "CheckpointThreads": {
+            "type": "object",
+            "required": [
+                "threadId",
+                "updatedAt"
+            ],
+            "properties": {
+                "threadId": {
                     "type": "string"
                 },
                 "updatedAt": {
@@ -509,6 +567,30 @@
                 }
             }
         },
+        "MessageBasic": {
+            "type": "object",
+            "required": [
+                "internalDate",
+                "messageId"
+            ],
+            "properties": {
+                "internalDate": {
+                    "type": "integer"
+                },
+                "messageId": {
+                    "type": "string"
+                },
+                "sender": {
+                    "$ref": "#/definitions/PersonInfo"
+                },
+                "snippet": {
+                    "type": "string"
+                },
+                "subject": {
+                    "type": "string"
+                }
+            }
+        },
         "PersonInfo": {
             "type": "object",
             "required": [
@@ -584,6 +666,24 @@
                 }
             }
         },
+        "PullThreadResponse": {
+            "type": "object",
+            "required": [
+                "checkpoint",
+                "threads"
+            ],
+            "properties": {
+                "checkpoint": {
+                    "$ref": "#/definitions/CheckpointThreads"
+                },
+                "threads": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Thread"
+                    }
+                }
+            }
+        },
         "TagInfo": {
             "type": "object",
             "required": [
@@ -596,6 +696,53 @@
                     "type": "integer"
                 },
                 "tag": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "Thread": {
+            "type": "object",
+            "required": [
+                "categories",
+                "labels",
+                "messages",
+                "mostRecentInternalDate",
+                "tags",
+                "threadId",
+                "updatedAt"
+            ],
+            "properties": {
+                "categories": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "labels": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "messages": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/MessageBasic"
+                    }
+                },
+                "mostRecentInternalDate": {
+                    "type": "integer"
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "threadId": {
                     "type": "string"
                 },
                 "updatedAt": {
